--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_light">#FFD1ECFF</color>
+    <color name="blue_dark">#FFC1E0F6</color>
+    <color name="button_color">#FF00B2FF</color>
 </resources>
