--- a/app/src/main/res/layout/fragment_bottom_sheet_add_note.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_add_note.xml
@@ -25,45 +25,46 @@
         />
 
     <RadioGroup
-        android:layout_marginTop="10dp"
+        android:id="@+id/rgCategory"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sport"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Health"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Education"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Healing"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
     </RadioGroup>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_marginTop="30dp"
+        android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:layout_marginTop="30dp"
         android:background="@drawable/radius_20_dp_stroke"
-        />
+        android:text="Submit" />
 
 </LinearLayout>
