--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -16,11 +16,11 @@
         >
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/radius_20_dp"
-            app:cardCornerRadius="50dp"
-            app:cardElevation="4dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:cardCornerRadius="8dp"
+            android:layout_centerVertical="true"
+            app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,6 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
                 android:src="@drawable/logo" />
         </androidx.cardview.widget.CardView>
         <TextView
