--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -1,65 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="5dp"
-    android:backgroundTint="#FFEEDF"
-    android:layout_marginVertical="10dp"
-    android:layout_margin="15dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        android:padding="10dp"
+    <data>
+        <variable
+            name="note"
+            type="com.example.noticeme.model.Note" />
+    </data>
+
+    <androidx.cardview.widget.CardView
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
+        android:backgroundTint="#FFEEDF"
+        android:layout_marginVertical="10dp"
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/ivNoteEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_round_mode_edit_24"
-            android:layout_toStartOf="@id/ivNoteDelete"
-            android:paddingHorizontal="10dp"
-            />
-        <ImageView
-            android:id="@+id/ivNoteDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_delete_24"
-            android:layout_alignParentEnd="true"
-            />
-        <TextView
-            android:id="@+id/tvNoteTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:fontFamily="@font/roboto"
-            />
-        <TextView
-            android:paddingVertical="10dp"
-            android:id="@+id/tvNoteDesc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvNoteTitle"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Parturient auctor arcu morbi non nec turpis."
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:fontFamily="@font/roboto"
-            />
-        <TextView
-            android:id="@+id/tvNoteCategory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Category"
-            android:textSize="16sp"
-            android:fontFamily="@font/roboto"
-            android:layout_below="@id/tvNoteDesc"
-            android:paddingTop="30dp"
-            />
-    </RelativeLayout>
+        android:layout_height="wrap_content">
 
-</androidx.cardview.widget.CardView>
+        <RelativeLayout
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/ivNoteEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_round_mode_edit_24"
+                android:layout_toStartOf="@id/ivNoteDelete"
+                android:paddingHorizontal="10dp" />
+
+            <ImageView
+                android:id="@+id/ivNoteDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_delete_24"
+                android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:id="@+id/tvNoteTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{note.title}"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:fontFamily="@font/roboto" />
+
+            <TextView
+                android:paddingVertical="10dp"
+                android:id="@+id/tvNoteDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvNoteTitle"
+                android:text="@{note.desc}"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:fontFamily="@font/roboto" />
+
+            <TextView
+                android:id="@+id/tvNoteCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{note.category}"
+                android:textSize="16sp"
+                android:fontFamily="@font/roboto"
+                android:layout_below="@id/tvNoteDesc"
+                android:paddingTop="30dp" />
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+</layout>
