--- a/app/src/main/res/layout/fragment_bottom_sheet_add_note.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_add_note.xml
@@ -31,6 +31,7 @@
         android:layout_marginTop="10dp">
 
         <RadioButton
+            android:id="@+id/rbSport"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sport"
@@ -38,6 +39,7 @@
             android:textSize="16sp" />
 
         <RadioButton
+            android:id="@+id/rbHealth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Health"
@@ -45,6 +47,7 @@
             android:textSize="16sp" />
 
         <RadioButton
+            android:id="@+id/rbEducation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Education"
@@ -52,6 +55,7 @@
             android:textSize="16sp" />
 
         <RadioButton
+            android:id="@+id/rbHealing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Healing"
