--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,11 +9,17 @@
         android:title="Search"
         app:showAsAction="ifRoom"
         app:actionViewClass="android.widget.SearchView"
-        tools:targetApi="o"/>
+        />
     <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_baseline_logout_24"
         android:title="Logout"
-        app:showAsAction="ifRoom"
+        app:showAsAction="collapseActionView"
+        />
+    <item
+        android:id="@+id/deleteAll"
+        android:icon="@drawable/ic_baseline_delete_24"
+        android:title="Delete All"
+        app:showAsAction="collapseActionView"
         />
 </menu>
