--- a/app/src/main/res/layout/on_boarding_item.xml
+++ b/app/src/main/res/layout/on_boarding_item.xml
@@ -19,7 +19,7 @@
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:background="@drawable/top_radius_20_dp"
         android:backgroundTint="@color/white"
@@ -43,6 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvOnBoardTitle"
+            android:maxEms="250"
+            android:maxLines="3"
             android:paddingHorizontal="10dp"
             android:text="Description"
             android:textColor="@color/black" />
@@ -52,9 +54,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/tvOnBoardDesc"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="70dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/radius_20_dp"
