--- a/app/src/main/res/drawable/ic_on_boarding_1.xml
+++ b/app/src/main/res/drawable/ic_on_boarding_1.xml
@@ -1,8 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="360dp"
     android:height="269dp"
     android:viewportWidth="360"
-    android:viewportHeight="269">
+    android:viewportHeight="269"
+    tools:ignore="VectorRaster">
   <path
       android:pathData="M281,82m-17,0a17,17 0,1 1,34 0a17,17 0,1 1,-34 0"
       android:fillColor="#BDDCED"/>
