--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/blue_dark"
     android:paddingHorizontal="10dp"
-    tools:context=".ui.RegisterFragment">
+    tools:context=".ui.RegisterFragment"
+    tools:ignore="Overdraw">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
