--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CBE9FF"
-    tools:context=".ui.SplashScreenFragment">
+    tools:context=".ui.SplashScreenFragment"
+    tools:ignore="Overdraw">
 
 
     <androidx.cardview.widget.CardView
